# grpc-kafka-home-assistant

./: README.md  commands.sh  kafka_setup.py  main.py  pyproject.toml
src/: client.py  config.py  devices.py  home_assistant.py  sensors.py  servers.py
src/protos/: home.proto  home_pb2.py  home_pb2_grpc.py
